...
        android:gravity="center"
        android:maxLines="3"
        android:textColor="#000000"
        android:textSize="@dimen/text_medium" />

    <LinearLayout
        android:id="@+id/topRatingContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ratingContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
...
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="5"
                android:text="5" />

            <TextView
                android:id="@+id/ratingView6"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="6"
                android:text="6" />

            <TextView
                android:id="@+id/ratingView7"
                style="@style/NPSCircle"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:tag="7"
                android:text="7" />
...
            android:fillViewport="false"
            android:overScrollMode="never"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/optionsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            </LinearLayout>
...
