<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="txtWidgetText" type="id"/>
    <item name="ratingBarWidget" type="id"/>
</resources>
